tests/ui/transmutability/visibility/should_accept_if_src_has_unreachable_ty.stderr
error[E0603]: struct `Src` is private
  --> $DIR/should_accept_if_src_has_unreachable_ty.rs:37:36
   |
LL |     assert::is_transmutable::<src::Src, dst::Dst, Context>();
   |                                    ^^^ private struct
   |
note: the struct `Src` is defined here
  --> $DIR/should_accept_if_src_has_unreachable_ty.rs:22:16
   |
LL |     #[repr(C)] pub(self) struct Src {
   |                ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
